--- a/css/main_index_mediascreenand.css
+++ b/css/main_index_mediascreenand.css
@@ -74,7 +74,7 @@
   margin-left: -100px;
   width: 90%;
 }
-#homeMain .tex:hover{
+#homeMain .tex img:hover{
   transform: rotate(1deg);
 }
 /*인트로듀스*/
@@ -883,7 +883,7 @@
   background: url(../images/footer_bg_g.png) no-repeat 80% 100%;
   background-size: 32%;
   position: relative;
-  z-index: -50;
+
 }
 #contact .tex {
   margin: 0 auto;
@@ -895,6 +895,9 @@
 #contact .tex img {
   margin-left: -100px;
   width: 90%;
+}
+#contact .tex img:hover {
+  transform: rotate(1deg);
 }
 #contact .bottom {
   width: 100%;
@@ -909,7 +912,7 @@
   padding: 12px 0;
   font-size: 1.2rem;
   text-align: center;
-  background: #333;
+  background: rgb(51, 51, 51);
   color: white;
   padding-bottom: 30px;
   text-shadow: 2px 2px 1px #000000;
